--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
-
-
-  <router-outlet></router-outlet>
+<app-header></app-header>
+<router-outlet></router-outlet>
+<app-footer></app-footer>
