--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,3 @@
-<p>
-  footer works!
-</p>
+<footer>
+  <p class="text-xs-center"> The Psalmist © Copyright 2019. All rights reserved.</p>
+</footer>
