--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,10 +11,10 @@
           <a class="nav-link" routerLink="/home">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/GithubSearch">Contacts</a>
+          <a class="nav-link" routerLink="/gitsearch">GithubSearch</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/Profile">Create</a>
+          <a class="nav-link" routerLink="/profile">Profile</a>
         </li>
 
       </ul>
