add image and text to the home component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,16 @@
-<p>
-  home works!
-</p>
+<main class="masthead py-3" id="banner">
+  <div class="container">
+    <div class="row-align-items-centre">
+      <div class="col-6 mx-auto col-md-6">
+        <img class="img-fluid mb-3 mb-md-0" src="https://www.lib.ncsu.edu/sites/default/files/github_0.png" alt="github logo" height="" width="">
+      </div>
+      <div class="col text-centre text-md-centre">
+        <h1>Your gateway to Github</h1>
+        <h3 class="text-secondary">Github on a Microwave</h3>
+        <p class="lead">Search for your favourite github user by their name to see their profiles and public repositories</p>
+        <p class="lead">You can also search for any project repositories</p>
+
+      </div>
+    </div>
+  </div>
+</main>
