--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,7 +11,7 @@
           <a class="nav-link" routerLink="/home">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/gitsearch">GithubSearch</a>
+          <a class="nav-link" routerLink="/gitsearch">Search</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/profile">Profile</a>
