--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -2,3 +2,10 @@
   margin-top: 40px;
   padding: 10px;
 }
+
+#jumbobanner {
+  background-image: url("https://images.pexels.com/photos/169573/pexels-photo-169573.jpeg?auto=format%2Ccompress&cs=tinysrgb&dpr=2&h=650&w=940");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 400px;
+}
