--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,16 +1,23 @@
-<main class="masthead py-3" id="banner">
+<body>
+  <div class="jumbotron " id="jumbobanner">
+    <div class="container-fluid">
+    </div>
+  </div>
   <div class="container">
     <div class="row-align-items-centre">
       <div class="col-6 mx-auto col-md-6">
-        <img class="img-fluid mb-3 mb-md-0" src="https://www.lib.ncsu.edu/sites/default/files/github_0.png" alt="github logo" height="" width="">
+        <img class="img-fluid mb-3 mb-md-0" src="assets/images/gitlogo.png" alt="github logo" height="800" width="512">
       </div>
       <div class="col text-centre text-md-centre">
         <h1>Your gateway to Github</h1>
-        <h3 class="text-secondary">Github on a Microwave</h3>
+        <h3 class="text-secondary">"Github on a Microwave"</h3>
         <p class="lead">Search for your favourite github user by their name to see their profiles and public repositories</p>
         <p class="lead">You can also search for any project repositories</p>
-
+      </div>
+      <div class="d-flex flex-column flex-md-row mb-3">
+        <a class="btn btn-lg btn-outline-primary mb-3 mb-md-0 mr-md-3" routerlink="/gitsearch" href="#/gitsearch">Search</a>
+        <a class="btn btn-lg btn-outline-secondary" routerlink="/profile" href="#/profile">Profile</a>
       </div>
     </div>
   </div>
-</main>
+</body>
