--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -7,5 +7,9 @@
   background-image: url("https://images.pexels.com/photos/169573/pexels-photo-169573.jpeg?auto=format%2Ccompress&cs=tinysrgb&dpr=2&h=650&w=940");
   background-repeat: no-repeat;
   background-size: cover;
-  height: 400px;
+  height: 512px;
+}
+
+hr {
+  background-color: #086918;
 }
