--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,19 +4,20 @@
     </div>
   </div>
   <div class="container">
-    <div class="row-align-items-centre">
+    <div class="row align-items-centre">
       <div class="col-6 mx-auto col-md-6">
         <img class="img-fluid mb-3 mb-md-0" src="assets/images/gitlogo.png" alt="github logo" height="800" width="512">
       </div>
-      <div class="col text-centre text-md-centre">
+      <div class="col-md-6 text-centre text-md-centre">
         <h1>Your gateway to Github</h1>
+        <hr id>
         <h3 class="text-secondary">"Github on a Microwave"</h3>
         <p class="lead">Search for your favourite github user by their name to see their profiles and public repositories</p>
         <p class="lead">You can also search for any project repositories</p>
       </div>
       <div class="d-flex flex-column flex-md-row mb-3">
-        <a class="btn btn-lg btn-outline-primary mb-3 mb-md-0 mr-md-3" routerlink="/gitsearch" href="#/gitsearch">Search</a>
-        <a class="btn btn-lg btn-outline-secondary" routerlink="/profile" href="#/profile">Profile</a>
+        <a class="btn btn-lg btn-outline-primary mb-3 mb-md-0 mr-md-3" routerLink="/gitsearch" href="#/gitsearch">Search</a>
+        <a class="btn btn-lg btn-outline-secondary" routerLink="/profile" href="#/profile">Profile</a>
       </div>
     </div>
   </div>
