--- a/src/app/gitsearch/gitsearch.component.html
+++ b/src/app/gitsearch/gitsearch.component.html
@@ -1,22 +1,12 @@
-<body id="searchPage">
-  <div class="container">
-    <div class="row align-items-centre">
-      <div class="col-6 mx-auto col-md-6">
-        <img src="{{user.avatar_url}}" alt="profilephoto">
-      </div>
-      <div class="col-md-6 text-centre text-md-centre">
-        <h1>Your gateway to Github</h1>
-        <h3></h3>
-        <hr id>
-        <h3 class="text-secondary">"Github on a Microwave"</h3>
-        <p class="lead">Search for your favourite github user by their name to see their profiles and public repositories</p>
-        <p class="lead">You can also search for any project repositories</p>
-      </div>
-
-      <div class="d-flex flex-column flex-md-row mb-3">
-        <a class="btn btn-lg btn-outline-primary mb-3 mb-md-0 mr-md-3" routerLink="/gitsearch" href="#/gitsearch">Search</a>
-        <a class="btn btn-lg btn-outline-secondary" routerLink="/profile" href="#/profile">Profile</a>
-      </div>
-    </div>
+<div class="container" id="searchPage">
+  <div class="">
+    <h3>Search for users</h3>
+    <hr>
   </div>
-</body>
+  <div class="input-group mb-3">
+    <div class="input-group-prepend">
+      <span class="input-group-text" id="basic-addon1">@</span>
+    </div>
+    <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+  </div>
+</div>
