add README.md file

--- a/src/app/gitsearch/gitsearch.component.html
+++ b/src/app/gitsearch/gitsearch.component.html
@@ -7,6 +7,6 @@
     <div class="input-group-prepend">
       <span class="input-group-text" id="basic-addon1">@</span>
     </div>
-    <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1" [(ngModel)]="username" name="username" (keypup)="newUserProfile()">
+    <input type="text" class="form-control" placeholder="Username" [(ngModel)]="username" name="username" (keypup)="newUserProfile()">
   </div>
 </div>
