modify user avatar images

--- a/src/app/gitsearch/gitsearch.component.html
+++ b/src/app/gitsearch/gitsearch.component.html
@@ -23,7 +23,7 @@
       <div class="card card-cascade">
         <!--Card image-->
         <div class="view view-cascade overlay">
-          <img src="{{user.avatar_url}}" class="card-img-top img-responsive" alt="profile photo">
+          <img src="{{user.avatar_url}}" class="card-img-top img-responsive">
           <a>
             <div class="mask rgba-white-slight"></div>
           </a>
